# pupy

./: .bumpversion.cfg  .cookiecutterrc  .coverage  .coveragerc  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  appveyor.yml  doctor.bat  doctor.sh  hermo.py  innout.py  manage.py  mgmt  pyproject.toml  pytest.ini  requires.txt  setup.cfg  setup.py  sink.py  sync.py  tox.ini
.pytest_cache/v/cache/: lastfailed  nodeids
binder/: format.ipynb  index.ipynb
ci/: appveyor-bootstrap.py  appveyor-download.py
ci/templates/: .travis.yml
docs/: .conf.py.un~  authors.rst  changelog.rst  conf.py  conf.py~  contributing.rst  herm.py  index.rst  installation.rst  modules.rst  readme.rst  usage.rst
docs/_build/coverage/: undoc.pickle
docs/_build/doctest/: output.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/pupy/: amazon_prime.html  decorations.html  listless.html  maths.html  savings_n_loads.html  werd.html
docs/_build/html/_sources/: index.rst.txt
docs/reference/: index.rst  pupy.rst
notebooks/: format.ipynb
pup/: __init__.py  amazon_prime.py  listless.py  maths.py  sodoku.py
pup.egg-info/: PKG-INFO  SOURCES.txt
pup/test_pup/: test_octopus_prime.py  test_pytriples_gen.py  test_sodoku.py  test_tictoc.py
pupy/: __init__.py  __main__.py  _alias.py  _jasm.py  _template.py  _template.pyi  _typing.py  _version.py  aio.py  aio.pyi  amazon.py  amazon.pyi  amazon_prime.py  amazon_prime.pyi  cheese.py  cheese.pyi  cli.py  cli.pyi  decorations.py  decorations.pyi  fmt.py  fmt.pyi  foreign.py  foreign.pyi  lin.py  lin.pyi  listless.py  listless.pyi  maths.py  maths.pyi  savings_n_loads.py  savings_n_loads.pyi  sh.py  sh.pyi  sodoku.py  sodoku.pyi  string_cheese.py  string_cheese.pyi  ui.py  ui.pyi  (+7 more)
pupy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pupy/sh/: __init__.py  win.py
pupy/test_pupy/: test_octopus_prime.py  test_vuple.py
scripts/: innout.py  mgmt
src/pupy/: __init__.py  __main__.py  _pupy.c  _version.py  amazon_prime.py  cli.py  decorations.py  foreign.py  listless.py  listless.pyi  maths.py  maths.pyi  savings_n_loads.py  sodoku.py  werd.py  werd.pyi  yield.py  yieldz.py
test_pup/: test_cbib.py  test_list_product.py  test_trigon.py
test_pupy/: test_list_product.py  test_octopus_prime.py  test_savings_n_loads.py  test_sodoku.py  test_trigon.py  test_vuple.py
tests/: test_cli.py  test_decorations.py  test_doctests.py  test_fmt.py  test_foreign.py  test_linked_tmp_dir.py  test_octopus_prime.py  test_pupy.py  test_pytriples_gen.py  test_savings_n_loads.py  test_sh.py  test_sodoku.py  test_tictoc.py  test_tree.py  test_trigon.py  test_ui.py  test_utils.py  test_vuple.py
tests/dummy_dir/: b_file.txt
