[tool.poetry]
name = "pupy"
version = "2.15.1"
description = "pretty useful python"
authors = ["jessekrubin <jessekrubin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^4.2"
pytest-cov = "^2.6"
mypy = "^0.701.0"
tox = "^3.11"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
# Compatible python versions
python = "^3.5"
